add service docker

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,8 @@ jobs:
   karsajobs:
     docker:
       - image: golang:latest
+    services:
+      - docker:dind # Aktifkan Docker executor
 
     steps:
       - checkout
