--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ jobs:
             chmod +x build_push_image_karsajobs.sh
             ./build_push_image_karsajobs.sh
 
-workflows:
+wworkflows:
   version: 2
   build:
     jobs:
-      - build
+      - karsajobs
