--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,16 +19,11 @@ jobs:
           name: test-app
           command: go test -v -short --count=1 $(go list ./...)
 
-      - setup-docker:
-          name: Setup Docker
-          command: |
-            sudo apt-get update
-            sudo apt-get -y install docker.io
-
-      - add-circleci-to-docker-group:
-          name: Add CircleCI to Docker Group
-          command: |
-            sudo usermod -aG docker $USER
+      - setup_remote_docker:
+          docker_layer_caching: true
+          setup_docker_layer: true
+          version: 20.10.7
+          aws_auth: true
 
       - run:
           name: build-app-karsajobs
