--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,14 @@ version: 2.1
 
 jobs:
   karsajobs:
+    # Konfigurasi job karsajobs
     docker:
       - image: golang:latest
+      # Menggunakan gambar Docker Golang:latest
 
     steps:
       - checkout
+        # Checkout kode sumber
 
       - run:
           name: lint-dockerfile
@@ -14,14 +17,17 @@ jobs:
             curl -sL -o /usr/local/bin/hadolint https://github.com/hadolint/hadolint/releases/latest/download/hadolint-Linux-x86_64
             chmod +x /usr/local/bin/hadolint
             hadolint Dockerfile
+            # Mengunduh dan menjalankan hadolint untuk memeriksa Dockerfile
 
       - run:
           name: test-app
           command: go test -v -short --count=1 $(go list ./...)
+          # Menjalankan pengujian aplikasi Go
 
       - setup_remote_docker:
           docker_layer_caching: true
           version: 20.10.14
+          # Menyiapkan remote Docker untuk caching layer
 
       - run:
           name: Download and install docker compose
@@ -30,12 +36,14 @@ jobs:
             curl -L "https://github.com/docker/compose/releases/download/v2.5.0/docker-compose-linux-x86_64" -o ~/docker-compose  
             chmod +x ~/docker-compose  
             mv ~/docker-compose /usr/local/bin/docker-compose
+            # Memperbarui paket Alpine dan mengunduh Docker Compose
 
       - run:
           name: build-app-karsajobs
           command: |
-            # chmod +x build_push_image_karsajobs.sh
-            # ./build_push_image_karsajobs.sh
+            chmod +x build_push_image_karsajobs.sh
+            ./build_push_image_karsajobs.sh
+            # Menjalankan skrip untuk membangun dan mengunggah image Docker ke Github Packages
 
 workflows:
   version: 2
