--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,11 +39,16 @@ jobs:
             # Memperbarui paket Alpine dan mengunduh Docker Compose
 
       - run:
-          name: build-app-karsajobs
+          name: Build test image
           command: |
-            chmod +x build_push_image_karsajobs.sh
-            ./build_push_image_karsajobs.sh
-            # Menjalankan skrip untuk membangun dan mengunggah image Docker ke Github Packages
+            docker build -t tests .
+
+      # - run:
+      #     name: build-app-karsajobs
+      #     command: |
+      #       chmod +x build_push_image_karsajobs.sh
+      #       ./build_push_image_karsajobs.sh
+      #       # Menjalankan skrip untuk membangun dan mengunggah image Docker ke Github Packages
 
 workflows:
   version: 2
