Add comment config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   karsajobs:
     # Konfigurasi job karsajobs
     docker:
-      # - image: golang:latest
+      - image: golang:latest
       # Menggunakan gambar Docker Golang:latest
       - image: docker:17.05.0-ce-git
     resource_class:
