--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,10 @@ jobs:
     docker:
       - image: ubuntu:latest
       # Menggunakan gambar Docker ubuntu:latest
-      - image: docker:17.05.0-ce-git
-    resource_class:
-      small
-      # Menggunakan gambar Docker
+    #   - image: docker:17.05.0-ce-git
+    # resource_class:
+    #   small
+    # Menggunakan gambar Docker
 
     steps:
       - checkout
@@ -19,14 +19,14 @@ jobs:
           docker_layer_caching: true
           version: 20.10.12
 
-      - run:
-          name: Download and install docker compose
-          command: |
-            apk update && apk upgrade && apk add curl  
-            curl -L "https://github.com/docker/compose/releases/download/v2.5.0/docker-compose-linux-x86_64" -o ~/docker-compose  
-            chmod +x ~/docker-compose  
-            mv ~/docker-compose /usr/local/bin/docker-compose
-            # Memperbarui paket Alpine dan mengunduh Docker Compose
+      # - run:
+      #     name: Download and install docker compose
+      #     command: |
+      #       apk update && apk upgrade && apk add curl
+      #       curl -L "https://github.com/docker/compose/releases/download/v2.5.0/docker-compose-linux-x86_64" -o ~/docker-compose
+      #       chmod +x ~/docker-compose
+      #       mv ~/docker-compose /usr/local/bin/docker-compose
+      #       # Memperbarui paket Alpine dan mengunduh Docker Compose
 
       - run:
           name: lint-dockerfile
