--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,13 @@ jobs:
   karsajobs:
     # Konfigurasi job karsajobs
     docker:
-      - image: ubuntu:latest
-      # Menggunakan gambar Docker ubuntu:latest
-    #   - image: docker:17.05.0-ce-git
-    # resource_class:
-    #   small
-    # Menggunakan gambar Docker
+      # - image: golang:latest
+      # Menggunakan gambar Docker Golang:latest
+      - image: docker:17.05.0-ce-git
+    resource_class:
+      small
+      - image: golang:latest
+      # Menggunakan gambar Docker
 
     steps:
       - checkout
@@ -19,14 +20,14 @@ jobs:
           docker_layer_caching: true
           version: 20.10.12
 
-      # - run:
-      #     name: Download and install docker compose
-      #     command: |
-      #       apk update && apk upgrade && apk add curl
-      #       curl -L "https://github.com/docker/compose/releases/download/v2.5.0/docker-compose-linux-x86_64" -o ~/docker-compose
-      #       chmod +x ~/docker-compose
-      #       mv ~/docker-compose /usr/local/bin/docker-compose
-      #       # Memperbarui paket Alpine dan mengunduh Docker Compose
+      - run:
+          name: Download and install docker compose
+          command: |
+            apk update && apk upgrade && apk add curl  
+            curl -L "https://github.com/docker/compose/releases/download/v2.5.0/docker-compose-linux-x86_64" -o ~/docker-compose  
+            chmod +x ~/docker-compose  
+            mv ~/docker-compose /usr/local/bin/docker-compose
+            # Memperbarui paket Alpine dan mengunduh Docker Compose
 
       - run:
           name: lint-dockerfile
@@ -36,10 +37,10 @@ jobs:
             hadolint Dockerfile
             # Mengunduh dan menjalankan hadolint untuk memeriksa Dockerfile
 
-      - run:
-          name: test-app
-          command: go test -v -short --count=1 $(go list ./...)
-          # Menjalankan pengujian aplikasi Go
+      # - run:
+      #     name: test-app
+      #     command: go test -v -short --count=1 $(go list ./...)
+      #     # Menjalankan pengujian aplikasi Go
 
       - run:
           name: Build test image
