--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,22 +36,17 @@ jobs:
             hadolint Dockerfile
             # Mengunduh dan menjalankan hadolint untuk memeriksa Dockerfile
 
-      # - run:
-      #     name: test-app
-      #     command: go test -v -short --count=1 $(go list ./...)
-      #     # Menjalankan pengujian aplikasi Go
+      - run:
+          name: test-app
+          command: go test -v -short --count=1 $(go list ./...)
+          # Menjalankan pengujian aplikasi Go
 
       - run:
-          name: Build test image
+          name: build-app-karsajobs
           command: |
-            docker build -t tests .
-
-      # - run:
-      #     name: build-app-karsajobs
-      #     command: |
-      #       chmod +x build_push_image_karsajobs.sh
-      #       ./build_push_image_karsajobs.sh
-      #       # Menjalankan skrip untuk membangun dan mengunggah image Docker ke Github Packages
+            chmod +x build_push_image_karsajobs.sh
+            ./build_push_image_karsajobs.sh
+            # Menjalankan skrip untuk membangun dan mengunggah image Docker ke Github Packages
 
 workflows:
   version: 2
