--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2.1
+orbs:
+  docker: circleci/docker@2.2.0 # Replace x.y.z with the latest version of the Docker orb
 
 jobs:
   karsajobs:
