--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,11 +42,11 @@ jobs:
       - run:
           name: build-app-karsajobs
           command: |
-            apk update && apk upgrade && apk add curl  
-            curl -L "https://github.com/docker/compose/releases/download/v2.5.0/docker-compose-linux-x86_64" -o ~/docker-compose  
-            chmod +x ~/docker-compose  
-            mv ~/docker-compose /usr/local/bin/docker-compose
-            # Memperbarui paket Alpine dan mengunduh Docker Compose
+            # apk update && apk upgrade && apk add curl  
+            # curl -L "https://github.com/docker/compose/releases/download/v2.5.0/docker-compose-linux-x86_64" -o ~/docker-compose  
+            # chmod +x ~/docker-compose  
+            # mv ~/docker-compose /usr/local/bin/docker-compose
+            # # Memperbarui paket Alpine dan mengunduh Docker Compose
             chmod +x build_push_image_karsajobs.sh
             ./build_push_image_karsajobs.sh
             # Menjalankan skrip untuk membangun dan mengunggah image Docker ke Github Packages
