--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,13 +10,13 @@ jobs:
       - checkout
         # Checkout kode sumber
 
-      - run:
-          name: lint-dockerfile
-          command: |
-            curl -sL -o /usr/local/bin/hadolint https://github.com/hadolint/hadolint/releases/latest/download/hadolint-Linux-x86_64
-            chmod +x /usr/local/bin/hadolint
-            hadolint Dockerfile
-            # Mengunduh dan menjalankan hadolint untuk memeriksa Dockerfile
+      # - run:
+      #     name: lint-dockerfile
+      #     command: |
+      #       curl -sL -o /usr/local/bin/hadolint https://github.com/hadolint/hadolint/releases/latest/download/hadolint-Linux-x86_64
+      #       chmod +x /usr/local/bin/hadolint
+      #       hadolint Dockerfile
+      #       # Mengunduh dan menjalankan hadolint untuk memeriksa Dockerfile
 
       # - run:
       #     name: test-app
@@ -24,14 +24,14 @@ jobs:
       #       go test -v -short --count=1 $(go list ./...)
       #       # Menjalankan pengujian aplikasi Go
 
-      - run:
-          name: Download and install docker compose
-          command: |
-            apk update && apk upgrade && apk add curl
-            curl -L "https://github.com/docker/compose/releases/download/v2.5.0/docker-compose-linux-x86_64" -o ~/docker-compose
-            chmod +x ~/docker-compose
-            mv ~/docker-compose /usr/local/bin/docker-compose
-            # Memperbarui paket Alpine dan mengunduh Docker Compose
+      # - run:
+      #     name: Download and install docker compose
+      #     command: |
+      #       apk update && apk upgrade && apk add curl
+      #       curl -L "https://github.com/docker/compose/releases/download/v2.5.0/docker-compose-linux-x86_64" -o ~/docker-compose
+      #       chmod +x ~/docker-compose
+      #       mv ~/docker-compose /usr/local/bin/docker-compose
+      #       # Memperbarui paket Alpine dan mengunduh Docker Compose
 
       - setup_remote_docker:
           docker_layer_caching: true
@@ -45,9 +45,11 @@ jobs:
             # chmod +x ~/docker-compose  
             # mv ~/docker-compose /usr/local/bin/docker-compose
             # # Memperbarui paket Alpine dan mengunduh Docker Compose
-            chmod +x build_push_image_karsajobs.sh
-            ./build_push_image_karsajobs.sh
+            # chmod +x build_push_image_karsajobs.sh
+            # ./build_push_image_karsajobs.sh
             # Menjalankan skrip untuk membangun dan mengunggah image Docker ke Github Packages
+
+            docker info
 
 workflows:
   version: 2
