--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,8 @@ jobs:
   karsajobs:
     # Konfigurasi job karsajobs
     docker:
-      - image: golang:latest
+      - image: docker:17.05.0-ce-git
+    resource_class: small
 
     steps:
       - checkout
