--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,11 +46,9 @@ jobs:
             # chmod +x ~/docker-compose  
             # mv ~/docker-compose /usr/local/bin/docker-compose
             # # Memperbarui paket Alpine dan mengunduh Docker Compose
-            # chmod +x build_push_image_karsajobs.sh
-            # ./build_push_image_karsajobs.sh
+            chmod +x build_push_image_karsajobs.sh
+            ./build_push_image_karsajobs.sh
             # Menjalankan skrip untuk membangun dan mengunggah image Docker ke Github Packages
-
-            docker info
 
 workflows:
   version: 2
